--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
 
         .card h3 {
             text-align: center;
-            font-size:x-large;
+            font-size:xx-large;
             margin-bottom: 20px;
             color: #131212;
         }
